連作先を追加

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
       <section id="four">
         <div class="container">
           <h3>Contact Me</h3>
-          <p>TwitterかDiscordに連絡してください</p>
+          <p>バグ、要望などあればgithubかtwitterまでおねがいします</p>
+          <a href="https://github.com/suinua/manifestGenerator" class="fab fa-github fa-2x" style="padding-right:15px"></a>
+          <a href="https://twitter.com/suinua" class="fab fa-twitter fa-2x"></a>
         </div>
       </section>
 
