新機能の追加
ファイルの配置を変更、copy,downloadに対応

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <script src="web/assets/js/breakpoints.min.js"></script>
   <script src="web/assets/js/util.js"></script>
   <script src="web/assets/js/main.js"></script>
-  <script src="web/src/js/main.js"></script>
+  <script src="web/output/main.js"></script>
 
 
 </body>
