メニュー修正

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <header>
       <span class="image avatar"><img src="web/images/avatar.jpg" alt="" /></span>
       <h1 id="logo"><a href="#">SUINUA</a></h1>
-      <p>Japan,Kanagawa</p>
+      <p>Japan,Kanagawa <br>
+          Dartを使ってかきかきしてます
+      </p>
     </header>
     <nav id="nav">
       <ul>
