--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
             <option value="skinPack">skinPack</option>
           </select>
           名前
-          <input id="name" type="text">
+          <div id="name" contenteditable style="border: solid 2px #e4e4e4;height:30px;border-radius:5px;outline: 0;"></div>
+
           説明
-          <textarea name="description" id="description" cols="30" rows="5"></textarea>
+          <div id="description" contenteditable style="border: solid 2px #e4e4e4;height:130px;border-radius:5px;outline: 0;">
+          </div>
           <input id="generate" type="button" value="生成">
           <input id="copy" type="button" value="copy">
           <input id="download" type="button" value="download">
