「plus」を「追加」に変更

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             Capabilities
             <div id="Capabilities"></div>
             <div style="display:flex">
-              <input id="newCapabilityText" type="text"><input id="addCapability" type="button" value="plus">
+              <input id="newCapabilityText" type="text"><input id="addCapability" type="button" value="追加">
             </div>
           </div>
           <input id="generate" type="button" value="生成">
