キャッシュ対策

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <script src="web/assets/js/breakpoints.min.js"></script>
   <script src="web/assets/js/util.js"></script>
   <script src="web/assets/js/main.js"></script>
-  <script src="web/output/main.js"></script>
+  <script src="web/output/main.js?ver-1.0.0"></script>
 
 </body>
 
